tests/baselines/reference/parserObjectType6.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType6.ts (2 errors) ====
    var v: {
       a: B
          ~
!!! error TS2304: Cannot find name 'B'.
       [];
       ~~
!!! error TS1096: An index signature must have exactly one parameter.
    };